
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 13
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta13


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 12
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta12

Fixes:

- Key/Mouse Callbacks: fixed issue where key/mouse callbacks were
	sending there ID as the sender (and as a string). They know
	send the active window as the sender and approriate information
	through data. #108

New Commands:

- Inputs:   input/slider/drag now have an "on_enter" keyword to only
	run their callbacks on enter key presses
- App:      new command "stop_dearpygui" #102
- Widgets:  new command "set_item_label" #99
- Widgets:  new command "get_item_label" #99

-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 11
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta11

New Features:

- Python 3.7 support


-----------------------------------------------------------------------
 VERSION 0.1.0 Beta 10
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta10

Fixes:

- Render Callback: fixed issue with debug window freezing main callback #95
- Child Widget:    child widget now shows a horizontal scrollbar if contents are too large #91 kinda
- Multiline:       fixed issue where multiline did not work with other flags (i.e. readonly) #94