@@ -40,7 +40,8 @@ namespace Marvel {
 		virtual void postrender () {}
 		virtual void cleanup    () {}
 		virtual void setWindowText(const std::string& name) {}
-
+		
+		void stop      () { m_running = false; }
 		void setupFonts();
 
 	protected:
